2010-10-24  Vitaly Mayatskikh  <v.mayatskih@gmail.com>

	* mime-view.el (mime-save-situation-examples): Don't fail when
	mime-situation-examples-file is nil.

2010-06-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* SEMI-CFG: Add emu subdirectory to load-path when LISPDIR is
	specified.  Suggested by Kazuhiro NISHIYAMA <zn@mbf.nifty.com>.

2010-06-04  David Maus  <dmaus@ictsoc.de>

	* pgg-parse.el: Add reference to RFC4880.
	(pgg-parse-symmetric-key-algorithm-alist)
	(pgg-parse-hash-algorithm-alist)
	(pgg-parse-compression-algorithm-alist)
	(pgg-parse-signature-type-alist): Update lists to RFC4880.

2010-02-19  Heinz Diehl <htd@fancy-poultry.org>

	* mime-edit.el (mime-edit-set-encrypt): Fix typo.

2010-02-07  David Maus <maus.david@gmail.com>

	* mime-edit.el (mime-edit-encrypt-pgp-mime): Added Version tag for
	pgp-encrypted messages to comply with RFC3156.
	* mime-edit.el (mime-edit-pgp-enclose-buffer): Sign and encrypt
	pgp message in conformance to RFC3156.

2010-01-25  Harald Judt  <h.judt@gmx.at>

	* mime-edit.el (mime-content-types): Added more MIME types.

2010-01-25  Vitaly Mayatskikh  <v.mayatskih@gmail.com>

	* mime-edit.el (mime-edit-insert-file): Ask user for MIME type and
	subtype during interactive file insertion, not only encoding.
	* mime-pgp.el (toplevel): New function:
	`mime-display-multipart/pgp-encrypted'.
	* pgg-def.el (toplevel): New custom: `pgg-decrypt-automatically'.
	* semi-setup.el (toplevel): New mime-preview condtion for MIME
	type "application/pgp-encrypted".

2010-01-19  Vitaly Mayatskikh  <v.mayatskih@gmail.com>

	* mime-view.el (toplevel): New defcustom: mime-view-buttons-visible
	* mime-view.el (mime-display-entity): Use mime-view-buttons-visible
	to control visibility of MIME buttons.

2007-06-18  Daiki Ueno  <ueno@unixuser.org>

	* mime-edit.el (turn-on-mime-edit): Remove redundant comments and
	newlines to make the amount of diff-lines minimal to the original.

2007-06-08  Katsumi Yamaoka  <yamaoka@jpl.org>
