@@ -1,3 +1,9 @@
+2010-11-10  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* mime-view.el (mime-view-type-subtype-score-alist): Accept
+	function as an alternate of score.
+	(mime-view-type-subtype-score-alist): Likewise.
+
 2010-10-24  Vitaly Mayatskikh  <v.mayatskih@gmail.com>
 
 	* mime-view.el (mime-save-situation-examples): Don't fail when
